--- a/sc-netflit-feign/src/main/resources/templates/login.html
+++ b/sc-netflit-feign/src/main/resources/templates/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>spring boot demo</title>
-    <link href='css/bootstrap.min.css' rel="stylesheet" >
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <link href='/demo/css/bootstrap.min.css' rel="stylesheet" >
+    <script type="text/javascript" src="/demo/js/jquery.min.js"></script>
     <style type="text/css">
         /* Override some defaults */
         html, body {
