--- a/sc-netflit-feign-two/src/main/resources/templates/login.html
+++ b/sc-netflit-feign-two/src/main/resources/templates/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>spring boot demo</title>
-    <link href='css/bootstrap.min.css' rel="stylesheet" >
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <link th:href="@{{path}/css/bootstrap.min.css(path=${contextPath})}" rel="stylesheet" >
+    <script type="text/javascript" th:src="@{{path}/js/jquery.min.js(path=${contextPath})}"></script>
     <style type="text/css">
         /* Override some defaults */
         html, body {
